# pdf-spot-disabler

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  README.in  README.md  THANKS  aclocal.m4  config.status  configure  configure.ac  makefile  pdf-spot-disabler-0.1.tar.bz2  pdf-spot-disabler.cpp  reconf
.deps/: getopt_pp.Po  pdf-spot-disabler.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
doc/: Makefile  Makefile.am  Makefile.in
m4/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.in  getopt_pp.cpp  pdf-spot-disabler.cpp
